--- a/package.json
+++ b/package.json
@@ -9,32 +9,37 @@
     "lint": "eslint --fix --config .eslintrc.json \"**/*.js\""
   },
   "dependencies": {
+    "@hapi/hoek": "^11.0.7",
+    "@hapi/topo": "^6.0.2",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
-    "codacy-coverage": "^3.4.0",
+    "codacy-coverage": "^2.0.3",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
     "cpf-cnpj-validator": "^1.0.3",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
-    "express": "~4.16.0",
-    "express-jwt": "^5.3.1",
+    "express": "^4.21.2",
+    "express-jwt": "^8.5.1",
     "express-validator": "^6.2.0",
     "fs": "^0.0.1-security",
     "html-pdf": "^3.0.1",
-    "jsonwebtoken": "^8.5.1",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "mocha-lcov-reporter": "^1.3.0",
     "moment": "^2.24.0",
-    "mongoose": "^5.9.13",
+    "mongoose": "^8.10.0",
     "morgan": "~1.9.0",
     "node-cep-correios": "^1.0.6",
-    "nodemailer": "^6.3.1"
+    "nodemailer": "^6.3.1",
+    "topo": "^3.0.3"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "eslint": "^6.5.1",
-    "mocha": "^6.2.2",
-    "nodemon": "^1.19.4",
-    "nyc": "^14.1.1"
+    "mocha": "^11.1.0",
+    "nodemon": "^3.1.9",
+    "nyc": "^17.1.0"
   }
 }
